[package]
name = "test-jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
elliptic-curve = "0.13.8"
jsonwebtoken = { version = "10.2.0", features =["default", "aws_lc_rs"]}
p224 = "0.13.2"
p256 = "0.13.2"
p384 = "0.13.1"
p521 = "0.13.3"
pem = "3.0.6"
pkcs8 = "0.10.2"
test-case = "3.3.1"
time = "0.3.44"
x509-parser = "0.18"

[dev-dependencies]
rcgen = { version = "0.14.5", features =["aws_lc_rs", "crypto"]}
tempfile = "3.23.0"

